examples/test/testpolicy16288.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16288
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key6: value11
      key1: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value30
          key32: value22
      podSelector:
        matchLabels:
          key37: value34
          key8: value30
          key39: value47
